welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:38: error: expected class or object definition
def FaireUneColonne(T:Array[Color]){
^Array2:54: error: Unmatched closing brace '}' ignored here
}
^